@@ -27,6 +27,7 @@ ChangeLog
 [-] * Avoid string length overflow in Nokia phonebook encoder.
 [-] * Introduced backward compatibility of gammu.StateMachine.SetConfig.
 [-] * Experimental dku-2 userspace driver using libusb-1.0 (fbususb).
+[-] * python-gammu can now inject messages into SMSD.
     
 20090126 - 1.22.92
 
